kubernetes/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        image: 816709079541.dkr.ecr.ap-south-1.amazonaws.com/flask-k8s-app:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: ecr-secret
